--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
     <div class="rainbowcat-left-bottom roll-in-left"></div>
 
 
-    <img id="userPhoto" src="https://i.imgur.com/t8ZX9um.jpg" alt="User Photo">
-    <a href="https://www.instagram.com/thesimpsons" id="userName">@thesimpsons</a>
+    <img id="userPhoto" src="https://media.discordapp.net/attachments/800669051444658196/896613879956791336/image0.png" alt="User Photo">
+    <a href="https://www.instagram.com/snowyicetea" id="userName">@SnowyIceTea</a>
     <div id="links">
-        <a class="link" href="https://pt.wikipedia.org/wiki/Homer_Simpson" target="_blank">😻 Wikipedia 😻</a>
-        <a class="link" href="https://foxplay.com/br/forme" target="_blank">😻 IMDB 😻</a>
+        <a class="link" href="www.instagram.com/snowyicetea" target="_blank">Instagram</a>
+        <a class="link" href="https://twitter.com/SnowyIceT" target="_blank">Twitter</a>
+        <a class="link" href="https://www.twitch.tv/snowyicetea" target="_blank">Twitch</a>
+        <a class="link" href="https://www.twitch.tv/snowyicetea" target="_blank">Twitch</a>
+        <a class="link" href="https://www.twitch.tv/snowyicetea" target="_blank">Twitch</a>
     </div>
 
     <!-- Javascript -->
