--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         <a class="link" href="www.instagram.com/snowyicetea" target="_blank">Instagram</a>
         <a class="link" href="https://twitter.com/SnowyIceT" target="_blank">Twitter</a>
         <a class="link" href="https://www.twitch.tv/snowyicetea" target="_blank">Twitch</a>
-        <a class="link" href="https://www.twitch.tv/snowyicetea" target="_blank">Twitch</a>
-        <a class="link" href="https://www.twitch.tv/snowyicetea" target="_blank">Twitch</a>
+        <a class="link" href="https://www.tiktok.com/@snowyicetea" target="_blank">Tik Tok</a>
+        <a class="link" href="https://www.youtube.com/channel/UC8RQ6cHc-ciUjt6mIvdKWbg" target="_blank">YouTube</a>
+        <a class="link" href="https://github.com/Ventispurr" target="_blank">My Bf who made this</a>
     </div>
 
     <!-- Javascript -->
